Define the Block Component.

--- a/components/card.html
+++ b/components/card.html
@@ -1,10 +1,8 @@
-<div style="width: 30%; padding: 4rem">
+<div class="card__main">
   <div class="card card--secondary">
     <header class="card__header">Card Title</header>
     <div class="card__body">
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, possimus
-      nobis unde voluptatum blanditiis reprehenderit aliquam vitae laborum earum
-      optio.
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur non eum deserunt quas minima consequatur. Similique culpa dolore neque deleniti!
     </div>
   </div>
 </div>
