--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,7 @@ h2,
 h3 {
   color: var(--color-headings);
   margin-bottom: 1rem;
+  line-height: 1.1;
 }
 
 h1 {
@@ -334,11 +335,11 @@ a {
   background: #02cdf1;
 }
 
-/* @media screen and (min-width: 375px) {
+@media screen and (min-width: 375px) {
   .card__body {
     font-size: 0.5rem;
   }
-} */
+}
 
 /* Plans */
 .plan__name {
@@ -645,5 +646,32 @@ a {
 
   .nav__item {
     border: 0;
+  }
+}
+
+/* Hero */
+.hero {
+  clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
+}
+
+.hero__tagline {
+  font-size: 2rem;
+  color: #b9c3cf;
+  letter-spacing: 1px;
+  margin: 2rem 0 5rem;
+}
+
+.hero__image {
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    padding-top: 0;
+  }
+
+  .hero__content {
+    text-align: left;
+    align-self: center;
   }
 }
