Define Block Plan Component.

--- a/components/plan.html
+++ b/components/plan.html
@@ -1,4 +1,4 @@
-<div style="width: 30%; padding: 4rem">
+<div class="card__main">
   <div class="plan plan--popular">
     <div class="card card--secondary">
       <header class="card__header">
