--- a/css/styles.css
+++ b/css/styles.css
@@ -307,7 +307,7 @@ a {
 /* Cards */
 .card__main {
   padding: 4rem;
-  width: 382px;
+  width: 100%;
 }
 
 .card {
@@ -319,11 +319,11 @@ a {
 .card__header,
 .card__body {
   padding: 2rem;
-  text-align: center;
+  text-align: left;
 }
 
 .card__body {
-  font-size: 12px;
+  font-size: 2rem;
 }
 .card--secondary {
   border-radius: 18px;
@@ -339,17 +339,25 @@ a {
   color: #fff;
 }
 
+.card--primary .badge--primary {
+  background: #126de4;
+}
+
 .card--secondary .badge--secondary {
   background: #02cdf1;
 }
 
 @media screen and (min-width: 375px) {
   .card__body {
-    font-size: 0.5rem;
+    font-size: 1.5rem;
   }
 }
 
 /* Plans */
+.plan {
+  transition: transform 0.2s ease-out;
+}
+
 .plan__name {
   color: #fff;
   margin: 0;
@@ -379,6 +387,10 @@ a {
   margin-bottom: 2rem;
 }
 
+.plan--popular {
+  transform: scale(1.1);
+}
+
 .plan--popular .card__header {
   position: relative;
 }
@@ -390,6 +402,14 @@ a {
   position: absolute;
   top: -6px;
   right: 5%;
+}
+
+.plan:hover {
+  transform: scale(1.05);
+}
+
+.plan--popular:hover {
+  transform: scale(1.15);
 }
 
 @media screen and (mid-width: 1024px) {
@@ -707,4 +727,14 @@ a {
   .block-domain__prices {
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   }
+}
+
+/* Plans Block */
+/*.block-plans .grid {
+  gap: 4rem;
+}*/
+
+.block-plans .card {
+  max-width: 500px;
+  margin: 0;
 }
