Add parcel for building.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+@import "./normalize.css";
 :root {
   --color-primary: #2584ff;
   --color-secondary: #00d9ff;
@@ -18,18 +19,22 @@
 /* Typography*/
 ::selection {
   background: var(--color-primary);
-  color:#fff;
+  color: #fff;
 }
 
 html {
   /* 62.5% of 16px = 10px */
-  font-size: 16px;
+  font-size: 62.5%;
+}
+
+img {
+  width: 100%;
 }
 
 body {
   font-family: Inter, Arial, Helvetica, sans-serif;
   color: var(--color-body);
-  font-size: 2.4rem;
+  font-size: 2rem;
   line-height: 1.5;
 }
 
@@ -42,7 +47,7 @@ h3 {
 }
 
 h1 {
-  font-size: 7rem;
+  font-size: 6rem;
 }
 
 h2 {
@@ -50,7 +55,9 @@ h2 {
 }
 
 h3 {
-  font-size: 3rem;
+  font-size: 2.8rem;
+  font-weight: 600;
+  line-height: 1.3;
 }
 
 p {
@@ -142,11 +149,10 @@ a {
 .list {
   list-style: none;
   padding-left: 0;
-  
 }
 
 .list__bold {
-  font-style: bold;
+  font-weight: bold;
 }
 
 .list--inline .list__item {
@@ -213,7 +219,7 @@ a {
   font-weight: 600;
   margin: 1rem 0rem;
   outline: 0;
-  padding: 2rem 3rem;
+  padding: 2rem 4vw;
   text-align: center;
   text-transform: uppercase;
   white-space: nowrap;
@@ -241,7 +247,7 @@ a {
 }
 
 .btn--secondary:hover {
-  background: #00c8eb;
+  background: lightskyblue;
 }
 
 .btn--accent {
@@ -267,6 +273,11 @@ a {
 .btn--outline:hover {
   background: var(--color-headings);
   color: #fff;
+}
+
+.btn--stretched {
+  padding-left: 6rem;
+  padding-right: 6rem;
 }
 
 @media screen and (min-width: 1024px) {
@@ -299,6 +310,7 @@ a {
   border: 0;
   flex-grow: 1;
   padding: 1.5rem 2rem;
+  width: 0;
 }
 
 .input-group .btn {
@@ -320,13 +332,12 @@ a {
 .card {
   box-shadow: 0px 0px 20px 10px #f3f3f3;
   overflow: hidden;
-  border-radius: 20px;
+  border-radius: 7px;
 }
 
 .card__header,
 .card__body {
-  padding: 2rem;
-  text-align: left;
+  padding: 2rem 7%;
 }
 
 .card__body {
@@ -354,12 +365,6 @@ a {
   background: #02cdf1;
 }
 
-@media screen and (min-width: 375px) {
-  .card__body {
-    font-size: 1.5rem;
-  }
-}
-
 /* Plans */
 .plan {
   transition: transform 0.2s ease-out;
@@ -373,7 +378,7 @@ a {
 }
 
 .plan__price {
-  font-size: 6rem;
+  font-size: 5rem;
 }
 
 .plan__billing-cycle {
@@ -420,6 +425,10 @@ a {
 }
 
 @media screen and (mid-width: 1024px) {
+  .plan--popular {
+    transform: scale(1.1);
+  }
+
   .plan__name {
     font-size: 1.4rem;
   }
@@ -474,14 +483,14 @@ a {
 .quote__author {
   font-style: normal;
   font-weight: 600;
-  font-size: 3rem;
+  font-size: 2rem;
   margin-bottom: 0;
 }
 
 .quote__organization {
   color: var(--color-headings);
   opacity: 0.4;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-style: normal;
 }
 
@@ -529,26 +538,66 @@ a {
 
 .testimonial__image {
   position: relative;
-}
-
-.testimonial__image > img {
-  width: 100%;
+  margin: 0 3rem;
 }
 
 .testimonial__image > .icon-container {
   position: absolute;
-  top: 1rem;
+  top: 3rem;
   right: -32px;
 }
 
 @media screen and (min-width: 768px) {
-  .testimonial .quote,
-  .testimonial .quote__author {
-    font-size: 2.4rem;
+  .testimonial__image {
+    margin: 0;
   }
 
   .testimonial .quote {
-    margin-left: 6rem;
+    margin: 5rem 0 0 6rem;
+    font-size: 120%;
+    line-height: 1.5;
+  }
+}
+
+/* Callouts */
+
+.callout {
+  padding: 4rem;
+  border-radius: 5px;
+}
+
+.callout--primary {
+  background: var(--color-primary);
+  color: #fff;
+}
+
+.callout__heading {
+  color: #fff;
+  margin-top: 0;
+  font-size: 3rem;
+}
+
+.callout .btn {
+  justify-self: center;
+  align-self: center;
+}
+
+.callout__content {
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .callout .grid--1x2 {
+    grid-template-columns: 1fr auto;
+  }
+
+  .callout__content {
+    text-align: left;
+  }
+
+  .callout .btn {
+    justify-self: start;
+    margin: 0 2rem;
   }
 }
 
@@ -586,8 +635,8 @@ a {
 
 /* Blocks */
 .block {
-  --padding-vertical: 6rem;
-  padding: --padding-vertical 2rem;
+  --padding-vertical: 5rem;
+  padding: var(--padding-vertical) 2rem;
 }
 
 .block__header {
@@ -611,12 +660,12 @@ a {
 
 .block--skewed-right {
   padding-bottom: calc(var(--padding-vertical) + 4rem);
-  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 95%);
 }
 
 .block--skewed-left {
   padding-bottom: calc(var(--padding-vertical) + 4rem);
-  clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 95%, 0% 100%);
 }
 
 .container {
@@ -646,7 +695,7 @@ a {
 
 .nav__item > a {
   color: #d2d0db;
-  transition: color 0.3sec;
+  transition: color 0.3s;
 }
 
 .nav__item > a:hover {
@@ -666,7 +715,8 @@ a {
 }
 
 .nav__brand {
-  transform: translateY(3px);
+  transform: translateY(5px);
+  width: 150px;
 }
 
 @media screen and (min-width: 768px) {
@@ -696,18 +746,16 @@ a {
   margin: 2rem 0 5rem;
 }
 
-.hero__image {
-  width: 100%;
-}
-
 @media screen and (min-width: 768px) {
-  .hero {
-    padding-top: 0;
-  }
-
   .hero__content {
     text-align: left;
     align-self: center;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .hero {
+    padding-top: 0;
   }
 }
 
@@ -720,8 +768,9 @@ a {
 }
 
 .block-domain__prices {
+  color: var(--color-headings);
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 6rem);
   font-size: 2rem;
   font-weight: 600;
@@ -737,13 +786,13 @@ a {
 }
 
 /* Plans Block */
-/*.block-plans .grid {
-  gap: 4rem;
-}*/
+.block-plans .grid {
+  gap: 8rem 4rem;
+}
 
 .block-plans .card {
   max-width: 500px;
-  margin: 0;
+  margin: 0 auto;
 }
 
 /* Features */
@@ -760,45 +809,37 @@ a {
   margin: 1rem 0;
 }
 
-.feature__image {
-  width: 100%;
-}
-
 @media screen and (min-width: 768px) {
   .feature:nth-of-type(even) .feature__content {
     order: 2;
   }
 }
 
-
 /* Showcase Block */
-.block-showcase__image > img {
-  width: 100%;
-}
-
 @media screen and (min-width: 768px) {
   .block-showcase .grid {
     grid-template-columns: 50% 50%;
   }
-  
+
   .block-showcase__image {
     justify-self: end;
   }
 
   .block-showcase__image > img {
-     width: auto;
-     max-width: 700px;
+    width: auto;
+    max-width: 700px;
   }
 }
 
 /* Footer */
 .footer {
   background: #232323;
+  padding-top: 10rem;
 }
 
 .footer a {
   color: #777;
-  transition: color .3s;
+  transition: color 0.3s;
 }
 
 .footer a:hover {
@@ -806,13 +847,19 @@ a {
 }
 
 .footer__section {
-  border-bottom: 1px solid #393939; 
+  border-bottom: 1px solid #393939;
   padding: 2rem;
+}
+
+.footer__section .list {
+  margin: 0;
 }
 
 .footer__heading {
   text-transform: uppercase;
   font-weight: 600;
+  font-size: 2.5rem;
+  line-height: 1.5;
 }
 
 .footer__brand {
@@ -822,7 +869,6 @@ a {
 
 .footer__brand img {
   /* TODO: Consider Refactoring this and applying it to all images */
-  width: 100%;
   max-width: 230px;
 }
 
@@ -837,7 +883,7 @@ a {
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   }
 
-  .footer .collapsible__chevron{
+  .footer .collapsible__chevron {
     display: none;
   }
 
@@ -859,15 +905,13 @@ a {
     border: 0;
   }
 
-  .footer__section .list {
-    margin: 0;
-  }
-
   .footer__heading {
     font-size: 1.6rem;
   }
+}
 
-  .list a {
-    font-size: 1.2rem;
-  }
+/* Sign-up Callout */
+
+.callout-signup {
+  transform: translateY(5rem);
 }
